# strawberry-chat-client

./: .gitignore  Cargo.toml  README.md  config.yml.example
.github/workflows/: clippy.yml
src/: auth.rs  client_meta.rs  config.rs  constants.rs  error_handler.rs  formatter.rs  global.rs  keep_alive.rs  lang.yml  main.rs  recv.rs  send.rs  types.rs  user_server_list.rs  utilities.rs
src/cli/: error_handler.rs  formatter.rs  mod.rs  sid_auth.rs  sync.rs  user_server_list.rs
src/communication/: keep_alive.rs  legacy_recv.rs  login.rs  mod.rs  recv.rs  register.rs  send.rs
src/core/: config.rs  formatter.rs  mod.rs  packet.rs  update.rs  verify.rs
src/fmt/: formatter.rs
src/object/: client_meta.rs  login_packet.rs
