[package]
name = "stbchat-rust"
version = "1.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stblib = { version = "0.6.3-pre1", features = ["stbchat", "notifications"] }
tokio = { version = "1.40.0", features = ["full"] }
reqwest = "0.12.7"
rustyline = "14.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.128"
rayon = "1.10.0"
fastrand = { version = "2.1.1" }
owo-colors = "4.1.0"
eyre = "0.6.12"
lazy_static = "1.5.0"
rprompt = "2.1.1"
socket2 = "0.5.7"
dirs = "5.0.1"
futures = "0.3.30"
strip-ansi-escapes = "0.2.0"

[profile.release]
opt-level = 'z'
strip = true
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
