[package]
name = "stbchat-rust"
version = "1.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stblib = { version = "0.7.0", features = ["stbchat", "notifications"] }
tokio = { version = "1.44.1", features = ["full"] }
reqwest = "0.12.12"
rustyline = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.140"
eyre = "0.6.12"
lazy_static = "1.5.0"
rprompt = "2.1.1"
socket2 = "0.5.9"
futures = "0.3.31"

# stblib = { version = "0.7.0", features = ["stbchat", "notifications"], path = "../../stblib-rust"}

[profile.release]
opt-level = 'z'
strip = true
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
